Creation of sectiones

--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
                   </div> 
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
+              <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#about-us-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">QUIENES SOMOS</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+              <button class="nav-link" id="project-tab" data-bs-toggle="tab" data-bs-target="#project-tab-pane" type="button" role="tab" aria-controls="proj-tab-pane" aria-selected="false">PROYECTO</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Contact</button>
+              <button class="nav-link" id="activities-tab" data-bs-toggle="tab" data-bs-target="#activities-tab-pane" type="button" role="tab" aria-controls="act-tab-pane" aria-selected="false">ACTIVIDADES</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>Disabled</button>
+              <button class="nav-link" id="collab-tab" data-bs-toggle="tab" data-bs-target="#collaboration-tab-pane" type="button" role="tab" aria-controls="collab-tab-pane" aria-selected="false">COLABORAR</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" id="inscription-tab" data-bs-toggle="tab" data-bs-target="#inscriptions-tab-pane" type="button" role="tab" aria-controls="inscr-tab-pane" aria-selected="false">INSCRIPCIONES</button>
             </li>
           </ul>
           <div class="tab-content" id="myTabContent">
