Inscriptions section advance including styles (to check later)

--- a/sections/actividades.html
+++ b/sections/actividades.html
@@ -125,7 +125,7 @@
             <li class="footer-item">Jobstown, Tallaght</li>
             <li class="footer-item">Dublín, Irlanda</li>
             <li class="footer-item">vazquez@projects.com</li>
-            <li class="footer-item"><img class="footer-slogan" src="images/footer-slogan.jpg" alt="slogan"></li>
+            <li class="footer-item"><img class="footer-slogan" src="../images/footer-slogan.jpg" alt="slogan"></li>
           </ul>
         </div>
         <div class="col-6 footer-box">
