Advance on Project Section, near to finish but still with some details to fix

--- a/sections/proyecto.html
+++ b/sections/proyecto.html
@@ -61,6 +61,59 @@
         </div>
       </div>
     </section>
+
+    <!--Section 2 - Body-->
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div>
+              <h2>Proyecto GC</h2>
+              <p>Los niños asisten a contra turno escolar en nuestro predio de González Catán cada semana.
+                El proyecto GC realiza un programa educativo con actividades simultáneas como educación física,
+                apoyo escolar, recreación con talleres de arte, música e idiomas. Los niños también participan
+                de una merienda saludable. Las actividades están diseñadas para estimular, enseñar y entrenar
+                las capacidades cognitivas, las relaciones de compañerismo con otros y el desarrollo físico.</p>
+            </div>
+            <div>
+              <h5>"El cerebro no es un vaso por llenar, sino una lámpara por encender".</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-fluid" src="../images/project-section/body-img.jpg" alt="kid-img">
+          </div>
+          <div class="col">
+            <h2>Objetivos</h2>
+            <p>Para lograr nuestro objetivo de proveer oportunidades para el desarrollo
+              integral de los niños y adolescentes, Los proyectos de GC se basan en tres ejes:</p>
+            <div class="row">
+              <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+                <img style="width: 120px; height: 120px;" src="../images/growing-pillar.jpg" alt="growing-pillar">
+                <h5 style="padding: 0; margin: 0;">Crecimiento</h5>
+              </div>
+              <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+                <img style="width: 120px; height: 120px;" src="../images/knowledge-pillar.jpg" alt="knowledge-pillar">
+                <h5 style="padding: 0; margin: 0;">Conocimiento</h5>
+              </div>
+              <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+                <img style="width: 120px; height: 120px;" src="../images/friendship-pillar.jpg" alt="friendship-pillar">
+                <h5 style="padding: 0; margin: 0;">Compañerismo</h5>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p>A través de nuestro programa educativo desarrollamos actividades que proveen oportunidades 
+                para lograr que los niños tengan buen crecimiento físico a través del deporte y la alimentación 
+                balanceada; para ayudar el desarrollo del conocimiento tienen apoyo pedagógico con enfoque en 
+                lenguas y matemáticas; y en lo relacional con talleres de arte, música e idiomas.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="pt-3">
