Collaboration section finished. I also modified header styles in each section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#about-us-tab-pane"
           type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><a
-            href="sections/quienes-somos.html">QUIENES SOMOS</a></button>
+            href="sections/quienes-somos.html" style="color: black;">QUIENES SOMOS</a></button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="project-tab" data-bs-toggle="tab" data-bs-target="#project-tab-pane" type="button"
