--- a/sections/actividades.html
+++ b/sections/actividades.html
@@ -18,14 +18,14 @@
       <li>
         <div class="container m-0 p-0">
           <a class="navbar-brand" href="../index.html">
-            <img src="../images/logo-header.jpg" alt="logo-header" width="50" height="45">
+            <img src="../images/logo-header.jpg" alt="logo-header" width="50" height="50">
           </a>
         </div>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#about-us-tab-pane"
           type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><a
-            href="quienes-somos.html">QUIENES SOMOS</a></button>
+            href="quienes-somos.html" style="color: black;">QUIENES SOMOS</a></button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="project-tab" data-bs-toggle="tab" data-bs-target="#project-tab-pane" type="button"
