--- a/sections/proyecto.html
+++ b/sections/proyecto.html
@@ -17,14 +17,14 @@
       <li>
         <div class="container m-0 p-0">
           <a class="navbar-brand" href="../index.html">
-            <img src="../images/logo-header.jpg" alt="logo-header" width="50" height="45">
+            <img src="../images/logo-header.jpg" alt="logo-header" width="50" height="50">
           </a>
         </div>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#about-us-tab-pane"
           type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><a
-            href="quienes-somos.html">QUIENES SOMOS</a></button>
+            href="quienes-somos.html" style="color: black;">QUIENES SOMOS</a></button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="project-tab" data-bs-toggle="tab" data-bs-target="#project-tab-pane" type="button"
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <div>
+            <div class="texts">
               <h2>Proyecto GC</h2>
               <p>Los niños asisten a contra turno escolar en nuestro predio de González Catán cada semana.
                 El proyecto GC realiza un programa educativo con actividades simultáneas como educación física,
@@ -75,12 +75,12 @@
                 de una merienda saludable. Las actividades están diseñadas para estimular, enseñar y entrenar
                 las capacidades cognitivas, las relaciones de compañerismo con otros y el desarrollo físico.</p>
             </div>
-            <div>
+            <div class="phrase">
               <h5>"El cerebro no es un vaso por llenar, sino una lámpara por encender".</h5>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row pillars">
           <div class="col-md-4">
             <img class="img-fluid" src="../images/project-section/body-img.jpg" alt="kid-img">
           </div>
@@ -103,7 +103,7 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row texts">
             <div class="col">
               <p>A través de nuestro programa educativo desarrollamos actividades que proveen oportunidades 
                 para lograr que los niños tengan buen crecimiento físico a través del deporte y la alimentación 
