About-Us section finished

--- a/sections/quienes-somos.html
+++ b/sections/quienes-somos.html
@@ -61,6 +61,102 @@
         </div>
       </div>
     </section>
+    <!--Section 2 - Body-->
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-2" style="text-align: center;">
+            <img src="../images/index-body-img.jpg" alt="">
+          </div>
+          <div class="col-10" style="display: flex; justify-content: center; align-items: center;">
+            <h3>Nuestros valores</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Educación
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Es la herramienta que permite a las personas, alcanzar su máximo potencial.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Excelencia
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Emprendemos nuestros proyectos con este principio como base, 
+                  ofreciendo actividades de calidad. Ellos merecen más que algo bueno, merecen lo mejor.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Transparencia
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Ponemos a disposición de nuestros colaboradores toda la información 
+                  necesaria sobre los recursos utilizados en nuestros proyectos.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Empatía
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Cada persona es única y merece la mirada apreciativa que los hace dignos como seres humanos. 
+                  Nuestro equipo interdisciplinario atiende las necesidades, tanto emocionales, físicas, cognitivas.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Equidad
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Todos tienen el derecho de que se les garanticen los accesos para satisfacer sus necesidades básicas.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Profesionalismo
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Contamos con un equipo de trabajo interdisciplinario que aborda todas las problemáticas desde 
+                  diferentes enfoques para cumplir con nuestra misión.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3" style="text-align: center;">
+            <img src="../images/index-body-img.jpg" alt="">
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3">
+            <div class="card">
+              <div class="card-header">
+                Desarrollo integral
+              </div>
+              <div class="card-body" style="height: 150px;">
+                <p class="card-text">Trabajamos para promover y proveer las oportunidades necesarias para 
+                  garantizar el crecimiento, el conocimiento y el compañerismo de todos.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 p-3" style="text-align: center;">
+            <img src="../images/index-body-img.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="pt-3">
