Collaboration Section finished

--- a/sections/colaborar.html
+++ b/sections/colaborar.html
@@ -23,8 +23,8 @@
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#about-us-tab-pane"
-          type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><a
-            href="quienes-somos.html" style="color: black;">QUIENES SOMOS</a></button>
+          type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true"><a href="quienes-somos.html"
+            style="color: black;">QUIENES SOMOS</a></button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="project-tab" data-bs-toggle="tab" data-bs-target="#project-tab-pane" type="button"
@@ -48,8 +48,32 @@
     </ul>
   </header>
 
-  <h1>COLABORAR</h1>
+  <main>
+    <section>
+      <div class="container">
+        <h1>¿Te gustaría ser parte de nuestro equipo y mejorar la vida de cientos de niños?</h1>
+        <div class="row">
+          <div class="col">
+            <div class="form-container">
+              <div class="form-group">
+                <label for="email">Déjanos tu correo electrónico</label>
+                <input type="email" id="email" name="email" placeholder="Ingresa tu correo electrónico aquí" required>
+              </div>
+              <div class="form-group">
+                <label for="message">Cuéntanos sobre ti. ¡Queremos conocerte!</label>
+                <textarea id="message" name="message" rows="4" placeholder="Redacta tu mensaje aquí" required></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit">Enviar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
+  <!--Footer Section - Collaborations-->
   <footer class="pt-3">
     <div class="container-fluid">
       <div class="row">
