--- a/sections/quienes-somos.html
+++ b/sections/quienes-somos.html
@@ -159,6 +159,7 @@
     </section>
   </main>
 
+  <!--Footer Section - About Us-->
   <footer class="pt-3">
     <div class="container-fluid">
       <div class="row">
