Advance in index section

--- a/index.html
+++ b/index.html
@@ -77,9 +77,18 @@
           <h5>articulando los siguientes tres ejes:</h5>
         </div>
         <div class="row">
-          <div class="col"></div>
-          <div class="col"></div>
-          <div class="col"></div>
+          <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+            <img style="width: 120px; height: 120px;" src="images/growing-pillar.jpg" alt="growing-pillar">
+            <h5 style="padding: 0; margin: 0;">Crecimiento</h5>
+          </div>
+          <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+            <img style="width: 120px; height: 120px;" src="images/knowledge-pillar.jpg" alt="knowledge-pillar">
+            <h5 style="padding: 0; margin: 0;">Conocimiento</h5>
+          </div>
+          <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+            <img style="width: 120px; height: 120px;" src="images/friendship-pillar.jpg" alt="friendship-pillar">
+            <h5 style="padding: 0; margin: 0;">Compañerismo</h5>
+          </div>
         </div>
       </div>
     </div>
