Advance in Index Section. Not finished yet

--- a/index.html
+++ b/index.html
@@ -76,19 +76,27 @@
           <h5 class="highlighted-text">que trabaja para promover el desarrollo integral de niños, niñas y adolescentes a través de la educación,</h5>
           <h5>articulando los siguientes tres ejes:</h5>
         </div>
-        <div class="row">
-          <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+        <div class="row mt-5">
+          <div class="col-sm-6 col-md-4 col-lg-4" style="display: flex; flex-direction: column; align-items: center;">
             <img style="width: 120px; height: 120px;" src="images/growing-pillar.jpg" alt="growing-pillar">
             <h5 style="padding: 0; margin: 0;">Crecimiento</h5>
           </div>
-          <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+          <div class="col-sm-6 col-md-4 col-lg-4" style="display: flex; flex-direction: column; align-items: center;">
             <img style="width: 120px; height: 120px;" src="images/knowledge-pillar.jpg" alt="knowledge-pillar">
             <h5 style="padding: 0; margin: 0;">Conocimiento</h5>
           </div>
-          <div class="col-sm-4" style="display: flex; flex-direction: column; align-items: center;">
+          <div class="col-sm-6 col-md-4 col-lg-4" style="display: flex; flex-direction: column; align-items: center;">
             <img style="width: 120px; height: 120px;" src="images/friendship-pillar.jpg" alt="friendship-pillar">
             <h5 style="padding: 0; margin: 0;">Compañerismo</h5>
           </div>
+        </div>
+        <div class="row" style="margin: 20px 0 5px 0;">
+          <div class="col">
+            <h2 style="text-align: center; margin-top: 5px; margin-bottom: 10px;">Proyecto GC</h2>
+          </div>
+          <div class="row">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/QHtjlg1BU0s" frameborder="0" allowfullscreen></iframe>
+        </div>        
         </div>
       </div>
     </div>
