Finished 100% Ab-Us section. I added text to the cover

--- a/sections/quienes-somos.html
+++ b/sections/quienes-somos.html
@@ -56,6 +56,10 @@
           <div class="col m-0 p-0">
             <div class="container-fluid d-flex ab-us-section-image">
               <img src="../images/abous-us-section/about-us-cover.jpg" class="img-fluid" alt="act-section-cover">
+              <div class="text">
+                <h1>Misión</h1>
+                <p style="background-color: #00a7d1; padding: 15px;">promover el desarrollo integral de los niños, niñas y adolescentes a través de la educación donde trabajamos</p>
+              </div>
             </div>
           </div>
         </div>
