--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
           <div class="col m-0 p-0">
             <div class="container-fluid d-flex index-section-image">
               <img src="images/index-cover.jpg" class="img-fluid" alt="act-section-cover">
+              <div class="text">
+                <h3 style="background-color: #28a745; padding: 10px 80px 10px 80px;">Trabajamos</h3>
+                <p>por una gran causa</p>
+              </div>
             </div>
           </div>
         </div>
